fix(modal): revert back the modal overflow property

--- a/packages/components/src/components/modal/modal.css
+++ b/packages/components/src/components/modal/modal.css
@@ -109,6 +109,7 @@
   display: flex;
   z-index: 1;
   position: relative;
+  overflow-y: auto;
   flex-direction: column;
   background-color: var(--background-window);
   color: var(--color-window);
@@ -119,6 +120,7 @@
 }
 
 .modal__window .modal__body-wrapper {
+  overflow-y: auto;
   flex-shrink: 1;
   flex-grow: 1;
 }
